Creating the different file structures for the folders in part 4 as well as adding the code for the html files

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -1,9 +1,19 @@
 <!doctype html>
 <html>
   <head>
+    <script src = "/js/global.js"></script>
+    <script src = "/js/index.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/css/global.css">
+    <link rel="stylesheet" type="text/css" href="/css/index.css">
   </head>
   <body>
-    <p>Hello World!</p>
-    <img src = "/images/marist.jpg" />
+    <img src = "/images/beach-bungalow.jpg"/>
+
+    <div class = "titles">
+      <h1>Oregon Trail</h1>
+      <b><h3 onclick="location.href = '/mainmenu'">Press the Spacebar to Continue</h3></b>
+    </div>
+
   </body>
 </html>
