Adding music and some of keyboard functionality to pages

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html>
   <head>
-    <script src = "/js/global.js"></script>
-    <script src = "/js/index.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/global.css">
     <link rel="stylesheet" type="text/css" href="/css/index.css">
@@ -12,8 +10,10 @@
 
     <div class = "titles">
       <h1>Oregon Trail</h1>
-      <b><h3 onclick="location.href = '/mainmenu'">Press the Spacebar to Continue</h3></b>
+      <b><h3 id = "spacebarToContinue">Press the Spacebar to Continue</h3></b>
     </div>
 
+    <script src = "/js/index.js"></script>
+    <script src = "/js/global.js"></script>
   </body>
 </html>
