--- a/client/views/setup.html
+++ b/client/views/setup.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html>
   <head>
-    <script src = "/js/global.js"></script>
-    <script src = "/js/setup.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/global.css">
     <link rel="stylesheet" type="text/css" href="/css/setup.css">
@@ -31,9 +29,11 @@
 
       <p>What is Your Choice?</p>
       <br>
-      <b><p onclick="location.href = '/mainmenu'">  Press the Space For the Main Menu.</p></b>
+      <b><p id = "spacebarForMenu">  Press the Space For the Main Menu.</p></b>
 
     </div>
 
+    <script src = "/js/setup.js"></script>
+    <script src = "/js/global.js"></script>
   </body>
 </html>
