--- a/client/views/trail.html
+++ b/client/views/trail.html
@@ -29,7 +29,7 @@
       <br>
     </div>
 
-      <b><p onclick="location.href = '/mainmenu'" class = "p">  Press the Space For the Main Menu.</p></b>
+      <b><p id = "spacebarForMenu" class = "p">  Press the Space For the Main Menu.</p></b>
 
   </body>
 </html>
