--- a/client/views/topten.html
+++ b/client/views/topten.html
@@ -1,8 +1,6 @@
 <!doctype html>
 <html>
   <head>
-    <script src = "/js/global.js"></script>
-    <script src = "/js/topten.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/global.css">
     <link rel="stylesheet" type="text/css" href="/css/topten.css">
@@ -67,7 +65,9 @@
     </div>
       <br>
 
-      <b><p onclick="location.href = '/mainmenu'">Press the Space For the Main Menu.</p></b>
+      <b><p id = "spacebarForMenu">Press the Space For the Main Menu.</p></b>
 
+      <script src = "/js/topten.js"></script>
+      <script src = "/js/global.js"></script>
   </body>
 </html>
