Creating array to store topScore objects for the top ten page

--- a/client/views/topten.html
+++ b/client/views/topten.html
@@ -7,6 +7,7 @@
 
   </head>
   <body>
+    <audio src = "/music/Lightsun.mp3" id = "audio" loop></audio>
     <div class = "titleimage">
       <img src = "/images/titleimg.png" />
     </div>
@@ -33,39 +34,70 @@
         </tr>
         <tr>
           <td>1)</td>
+          <td id = "name1">N/A</td>
+          <td id = "score1">N/A</td>
+          <td id = "date1">N/A</td>
         </tr>
         <tr>
           <td>2)</td>
+          <td id = "name2">N/A</td>
+          <td id = "score2">N/A</td>
+          <td id = "date2">N/A</td>
         </tr>
         <tr>
           <td>3)</td>
+          <td id = "name3">N/A</td>
+          <td id = "score3">N/A</td>
+          <td id = "date3">N/A</td>
         </tr>
         <tr>
           <td>4)</td>
+          <td id = "name4">N/A</td>
+          <td id = "score4">N/A</td>
+          <td id = "date4">N/A</td>
         </tr>
         <tr>
           <td>5)</td>
+          <td id = "name5">N/A</td>
+          <td id = "score5">N/A</td>
+          <td id = "date5">N/A</td>
         </tr>
         <tr>
           <td>6)</td>
+          <td id = "name6">N/A</td>
+          <td id = "score6">N/A</td>
+          <td id = "date6">N/A</td>
         </tr>
         <tr>
           <td>7)</td>
+          <td id = "name7">N/A</td>
+          <td id = "score7">N/A</td>
+          <td id = "date7">N/A</td>
         </tr>
         <tr>
           <td>8)</td>
+          <td id = "name8">N/A</td>
+          <td id = "score8">N/A</td>
+          <td id = "date8">N/A</td>
         </tr>
         <tr>
           <td>9)</td>
+          <td id = "name9">N/A</td>
+          <td id = "score9">N/A</td>
+          <td id = "date9">N/A</td>
         </tr>
         <tr>
           <td>10)</td>
+          <td id = "name10">N/A</td>
+          <td id = "score10">N/A</td>
+          <td id = "date10">N/A</td>
         </tr>
       </table>
     </div>
       <br>
 
       <b><p id = "spacebarForMenu">Press the Space For the Main Menu.</p></b>
+      <p id = "sound"></p>
 
       <script src = "/js/topten.js"></script>
       <script src = "/js/global.js"></script>
