--- a/client/views/index.html
+++ b/client/views/index.html
@@ -13,6 +13,8 @@
       <b><h3 id = "spacebarToContinue">Press the Spacebar to Continue</h3></b>
     </div>
 
+    <p id = "sound"></p>
+
     <script src = "/js/index.js"></script>
     <script src = "/js/global.js"></script>
   </body>
