--- a/client/views/setup.html
+++ b/client/views/setup.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="/css/setup.css">
   </head>
   <body>
+    <audio src = "/music/Lightsun.mp3" id = "audio" loop></audio>
     <div class = "titleimage">
       <img src = "/images/titleimg.png" />
     </div>
@@ -30,6 +31,7 @@
       <p>What is Your Choice?</p>
       <br>
       <b><p id = "spacebarForMenu">  Press the Space For the Main Menu.</p></b>
+      <p id = "sound"></p>
 
     </div>
 
