--- a/client/views/trail.html
+++ b/client/views/trail.html
@@ -1,13 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <script src = "/js/global.js"></script>
-    <script src = "/js/trail.js"></script>
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/css/global.css">
     <link rel="stylesheet" type="text/css" href="/css/trail.css">
   </head>
   <body>
+    <audio src = "/music/Lightsun.mp3" id = "audio" loop></audio>
     <div class = "titleimage">
       <img src = "/images/titleimg.png" class = "img"/>
     </div>
@@ -30,6 +29,9 @@
     </div>
 
       <b><p id = "spacebarForMenu" class = "p">  Press the Space For the Main Menu.</p></b>
+      <p id = "sound"></p>
 
+      <script src = "/js/trail.js"></script>
+      <script src = "/js/global.js"></script>
   </body>
 </html>
