Adding the music functionality to play across all of the pages

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -13,7 +13,7 @@
       <b><h3 id = "spacebarToContinue">Press the Spacebar to Continue</h3></b>
     </div>
 
-    <p id = "sound"></p>
+    <audio src = "/music/Lightsun.mp3" id = "audio" loop></audio>
 
     <script src = "/js/index.js"></script>
     <script src = "/js/global.js"></script>
