--- a/client/views/setup.html
+++ b/client/views/setup.html
@@ -34,6 +34,8 @@
       <p id = "sound"></p>
 
     </div>
+    <audio src = "/music/Lightsun.mp3" id = "audio" loop></audio>
+
 
     <script src = "/js/setup.js"></script>
     <script src = "/js/global.js"></script>
