--- a/client/views/topten.html
+++ b/client/views/topten.html
@@ -99,6 +99,8 @@
       <b><p id = "spacebarForMenu">Press the Space For the Main Menu.</p></b>
       <p id = "sound"></p>
 
+      <audio src = "/music/Lightsun.mp3" id = "audio" loop></audio>
+
       <script src = "/js/topten.js"></script>
       <script src = "/js/global.js"></script>
   </body>
