--- a/client/views/trail.html
+++ b/client/views/trail.html
@@ -28,8 +28,10 @@
       <br>
     </div>
 
-      <b><p id = "spacebarForMenu" class = "p">  Press the Space For the Main Menu.</p></b>
+      <b><p class = "p">Press ENTER to Travel a Day or SPACEBAR to Change Pace!</p></b>
       <p id = "sound"></p>
+
+      <audio src = "/music/Lightsun.mp3" id = "audio" loop></audio>
 
       <script src = "/js/trail.js"></script>
       <script src = "/js/global.js"></script>
