fixing the save profession and save player names to use the body of the post request to send the value

--- a/client/views/setup.html
+++ b/client/views/setup.html
@@ -18,22 +18,25 @@
     <br>
     <br>
 
-    <div class = "list">
-      <ol>
-        <li>Be a Banker From Boston</li>
-        <li>Be a Carpenter From Ohio</li>
-        <li>Be a Farmer From Illinois</li>
-        <li>Find Out the Differences Between the Choices</li>
-      </ol>
+    <div id = "gameContainer">
+      <div class = "list">
+        <ol>
+          <li>Be a Banker From Boston</li>
+          <li>Be a Carpenter From Ohio</li>
+          <li>Be a Farmer From Illinois</li>
+          <li>Find Out the Differences Between the Choices</li>
+        </ol>
 
-      <br>
+        <br>
 
-      <p>What is Your Choice?</p>
-      <br>
-      <b><p id = "spacebarForMenu">  Press the Space For the Main Menu.</p></b>
-      <p id = "sound"></p>
+        <p>What is Your Choice?</p>
+        <br>
+        <b><p id = "spacebarForMenu">  Press the Space For the Main Menu.</p></b>
+        <p id = "sound"></p>
 
+      </div>
     </div>
+    
     <audio src = "/music/Lightsun.mp3" id = "audio" loop></audio>
 
 
