creating the fetch method and the different game screens for setup

--- a/client/views/setup.html
+++ b/client/views/setup.html
@@ -19,26 +19,10 @@
     <br>
 
     <div id = "gameContainer">
-      <div class = "list">
-        <ol>
-          <li>Be a Banker From Boston</li>
-          <li>Be a Carpenter From Ohio</li>
-          <li>Be a Farmer From Illinois</li>
-          <li>Find Out the Differences Between the Choices</li>
-        </ol>
-
-        <br>
-
-        <p>What is Your Choice?</p>
-        <br>
-        <b><p id = "spacebarForMenu">  Press the Space For the Main Menu.</p></b>
-        <p id = "sound"></p>
-
-      </div>
     </div>
-    
+    <p id = "sound"></p>
+    <!-- <b><p id = "spacebarForMenu"> Press the Space For the Main Menu.</p></b> -->
     <audio src = "/music/Lightsun.mp3" id = "audio" loop></audio>
-
 
     <script src = "/js/setup.js"></script>
     <script src = "/js/global.js"></script>
