--- a/client/public/css/mainmenu.css
+++ b/client/public/css/mainmenu.css
@@ -8,8 +8,11 @@ img{
 
 .titleimage{
   position: relative;
-  width: 80%;
-  left: 10%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 600px;
+  height: 150px;;
 }
 
 .menutitles{
@@ -23,7 +26,7 @@ img{
 .list{
   width: 100%;
   position: relative;
-  left: 40%;
+  left: 35%;
   color: #2eb8b8;
   font-size: 150%;
 }
