--- a/client/public/css/setup.css
+++ b/client/public/css/setup.css
@@ -8,8 +8,11 @@ img{
 
 .titleimage{
   position: relative;
-  width: 80%;
-  left: 10%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 600px;
+  height: 150px;;
 }
 
 .menutitles{
