--- a/client/public/css/trail.css
+++ b/client/public/css/trail.css
@@ -1,15 +1,42 @@
 .img{
-  width: 80%;
+  width: 100%;
   height: 60%;
-  display: block;
+  position: relative;
+}
+
+#terrainContain{
+  background-image: : '/images/desert.jpg';
+  width: 630px;
+  height: 430px;
   margin-left: auto;
   margin-right: auto;
 }
 
+#choosePace {
+	position: absolute;
+	top: 15%;
+	left: 42.5%;
+	width: 15%;
+  height: 15%;
+	background-color: #ffff99;
+}
+
+#messages {
+	position: absolute;
+	top: 15%;
+	left: 42.5%;
+	width: 25%;
+  height: 7%;
+	background-color: #ffff99;
+}
+
 .titleimage{
   position: relative;
-  width: 80%;
-  left: 10%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 600px;
+  height: 150px;
 }
 
 .menutitles{
@@ -22,24 +49,25 @@
 
 .list{
   color: #000066;
-  width: 100%;
-  left: 10%;
-  position: relative;
+  width: 630px;
+  margin-left: auto;
+  margin-right: auto;
+  bottom: 130px;
 }
 
 .p{
+  bottom: 140px;
   text-align: center;
   color: #2eb8b8;
   font-size: 150%;
 }
 
-.boat{
-  width: 10%;
-  height: 10%;
-  position: absolute;
-  left: 80%;
-  bottom: 30%;
-
+#hiker{
+  width: 100px;
+  height: 100px;
+  position: relative;
+  left: -30px;
+  top: 330px;
 }
 
 #sound{
