--- a/client/views/index.html
+++ b/client/views/index.html
@@ -10,10 +10,11 @@
 
     <div class = "titles">
       <h1>Oregon Trail</h1>
-      <b><h3 id = "spacebarToContinue">Press the Spacebar to Continue</h3></b>
+      <b><h3 id = "spacebarForMenu">Press the Spacebar to Continue</h3></b>
     </div>
 
-    <audio src = "/music/Lightsun.mp3" id = "audio" loop></audio>
+    <!-- <audio src = "/music/Lightsun.mp3" id = "audio" loop></audio> -->
+    <!-- <p id = "sound"></p> -->
 
     <script src = "/js/index.js"></script>
     <script src = "/js/global.js"></script>
