--- a/client/views/trail.html
+++ b/client/views/trail.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/css/global.css">
     <link rel="stylesheet" type="text/css" href="/css/trail.css">
   </head>
+
   <body>
     <audio src = "/music/Lightsun.mp3" id = "audio" loop></audio>
     <div class = "titleimage">
@@ -14,26 +15,57 @@
     <br>
     <br>
 
-    <img src = "/images/ocean.jpg" class = "img"/>
-    <img src = "/images/boat.png" class = "boat"/>
+    <div id = 'container'>
+      <div id = "terrainContain">
+        <!-- <img src = "/images/desert.jpg"/> -->
+        <img src = "/images/hiker.png" id = "hiker"/>
+      </div>
 
-    <div class = "list">
-      <p>Days on the Trail:</p>
-      <p>Miles Traveled:</p>
-      <p>Current Weather:</p>
-      <p>Current Health:</p>
-      <p>Current Pace:</p>
-      <p>Current Terrain:</p>
-      <p># of Party Members:</p>
-      <br>
-    </div>
+      <div class = "list">
+        <br>
+        <span>Days on the Trail:  </span>
+        <span id = 'daysOnTrail'></span>
+        <br>
+        <span>Miles Traveled:  </span>
+        <span id = 'milesTraveled'></span>
+        <br>
+        <span>Current Weather:  </span>
+        <span id = 'currentWeather'></span>
+        <br>
+        <span>Current Health:  </span>
+        <span id = 'currentHealth'></span>
+        <br>
+        <span>Current Pace:  </span>
+        <span id = 'currentPace'></span>
+        <br>
+        <span>Current Terrain:  </span>
+        <span id = 'currentTerrain'></span>
+        <br>
+        <span># of Party Members:  </span>
+        <span id = 'partyMembers'></span>
+        <br>
+      </div>
 
       <b><p class = "p">Press ENTER to Travel a Day or SPACEBAR to Change Pace!</p></b>
+
+      <div id="messages"></div>
+
+      <div id="choosePace">
+        <p><b>Select a Pace:</b></p>
+        <ol>
+          <li id="steady">Steady</li>
+          <li id="strenuous">Strenuous</li>
+          <li id="grueling">Grueling</li>
+          <li id="resting">Resting</li>
+        </ol>
+      </div>
       <p id = "sound"></p>
+    </div>
 
-      <audio src = "/music/Lightsun.mp3" id = "audio" loop></audio>
 
-      <script src = "/js/trail.js"></script>
-      <script src = "/js/global.js"></script>
+    <audio src = "/music/Lightsun.mp3" id = "audio" loop></audio>
+
+    <script src = "/js/trail.js"></script>
+    <script src = "/js/global.js"></script>
   </body>
 </html>
